--- a/index.html
+++ b/index.html
@@ -326,28 +326,29 @@ window.stockfishLoading = true;
 window.stockfishReady = false;
 </script>
 <script type="module">
+// Completely disable Worker constructor before loading Stockfish
+const OriginalWorker = window.Worker;
+window.Worker = function(scriptURL, options) {
+    console.log('Worker creation blocked:', scriptURL);
+    // Return a mock worker that does nothing
+    return {
+        postMessage: () => {},
+        terminate: () => {},
+        onmessage: null,
+        onerror: null,
+        addEventListener: () => {},
+        removeEventListener: () => {},
+        dispatchEvent: () => {}
+    };
+};
+
 // Load the sf16-7 Stockfish engine with error handling
 try {
     console.log('Loading Stockfish module...');
     const Sf167Web = await import('./scripts/sf16-7.js');
 
-    // Initialize and expose Stockfish globally with forced single-threaded mode
-    const StockfishModule = Sf167Web.default || Sf167Web;
-
-    window.Stockfish = async (options = {}) => {
-        // Force single-threaded mode but allow shared memory
-        const config = {
-            ...options,
-            // Disable worker creation but allow shared memory
-            mainScriptUrlOrBlob: null,
-            // Force single-threaded execution
-            __IS_SINGLE_THREADED__: true,
-            // Let it use the default shared memory that it expects
-            // wasmMemory: null  // Let it create its own shared memory
-        };
-
-        return await StockfishModule(config);
-    };
+    // Initialize and expose Stockfish globally
+    window.Stockfish = Sf167Web.default || Sf167Web;
 
     window.stockfishReady = true;
     window.stockfishLoading = false;
