--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                      style="flex: 1; min-height: 100px; overflow-y: auto; overflow-x: hidden; white-space: pre-wrap; word-break: break-word;"></div>
                             </div>
                             <div class="grid-row"
-                                 style="padding: 0 6px 10px 10px; margin-top: 6px; height: 50px; min-height: 50px; position: absolute; bottom: 0; left: -10px; right: 0;">
+                                 style="margin-top: 6px; height: 50px; min-height: 50px; position: absolute; bottom: 0; right: 0;">
                                 <input id="mainInput" class="ics-input"/>
                             </div>
                         </div>
